--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -408,32 +408,32 @@ If your existing site uses [file-based routing](/en/core-concepts/astro-pages/#m
 
 4. Create a `src/content/config.ts` file and [define a schema](/en/guides/content-collections/#defining-a-collection-schema) for each content type. For the blog, we only have one content type, `posts`:
 
-```ts title="src/content/config.ts"
-// Import utilities from `astro:content`
-import { z, defineCollection } from "astro:content";
-// Define a schema for each collection you'd like to validate.
-const postsCollection = defineCollection({
-    schema: z.object({
-      title: z.string(),
-      pubDate: z.date(),
-      description: z.string(),
-      author: z.string(),
-      image: z.object({
-        url: z.string(),
-        alt: z.string()
-      }),
-      tags: z.array(z.string())
-    })
- });
-// Export a single `collections` object to register your collection(s)
-export const collections = {
-  posts: postsCollection,
-};
-```
+    ```ts title="src/content/config.ts"
+    // Import utilities from `astro:content`
+    import { z, defineCollection } from "astro:content";
+    // Define a schema for each collection you'd like to validate.
+    const postsCollection = defineCollection({
+        schema: z.object({
+          title: z.string(),
+          pubDate: z.date(),
+          description: z.string(),
+          author: z.string(),
+          image: z.object({
+            url: z.string(),
+            alt: z.string()
+          }),
+          tags: z.array(z.string())
+        })
+    });
+    // Export a single `collections` object to register your collection(s)
+    export const collections = {
+      posts: postsCollection,
+    };
+    ```
 
-:::tip
-If your editor doesn't recognize `astro:content`, make sure you're on the latest version of Astro and try restarting the dev server. 
-:::
+    :::tip
+    If your editor doesn't recognize `astro:content`, make sure you're on the latest version of Astro and try restarting the dev server. 
+    :::
 
 
 5. [Generate routes from your collections](/en/guides/content-collections/#generating-routes-from-content). Inside a collection, Markdown and MDX files no longer automatically become pages using Astro's [file-based routing](/en/guides/markdown-content/#file-based-routing), so you must generate the pages yourself.
@@ -444,40 +444,41 @@ If your editor doesn't recognize `astro:content`, make sure you're on the latest
 
     Render your post `<Content />` within the layout for your Markdown or MDX pages. This allows you to specify a common layout for all of your posts.
 
-```astro title="src/pages/posts/[...slug].astro"
----
-import { getCollection } from 'astro:content';
-import MarkdownPostLayout from '../../layouts/MarkdownPostLayout.astro';
+    ```astro title="src/pages/posts/[...slug].astro"
+    ---
+    import { getCollection } from 'astro:content';
+    import MarkdownPostLayout from '../../layouts/MarkdownPostLayout.astro';
 
-export async function getStaticPaths() {
-  const blogEntries = await getCollection('posts');
-  return blogEntries.map(entry => ({
-    params: { slug: entry.slug }, props: { entry },
-  }));
-}
+    export async function getStaticPaths() {
+      const blogEntries = await getCollection('posts');
+      return blogEntries.map(entry => ({
+        params: { slug: entry.slug }, props: { entry },
+      }));
+    }
 
-const { entry } = Astro.props;
-const { Content } = await entry.render();
----
-<MarkdownPostLayout frontmatter={entry.data}>
-  <Content />
-</MarkdownPostLayout>
-```
+    const { entry } = Astro.props;
+    const { Content } = await entry.render();
+    ---
+    <MarkdownPostLayout frontmatter={entry.data}>
+      <Content />
+    </MarkdownPostLayout>
+    ```
 
 6. Now that you wrapped your content in a layout, remove the `layout` definition in each individual post's frontmatter. 
 
-```md title="src/content/post-1.md" del={2}
----
-layout: ../../layouts/MarkdownPostLayout.astro
-title: 'My First Blog Post'
-pubDate: 2022-07-01
-...
----
-```
+    ```md title="src/content/post-1.md" del={2}
+    ---
+    layout: ../../layouts/MarkdownPostLayout.astro
+    title: 'My First Blog Post'
+    pubDate: 2022-07-01
+    ...
+    ---
+    ```
 
-7. Replace `Astro.glob()` with [`getCollection()`](/en/reference/api-reference/#getcollection) to fetch content and metadata from your Markdown files. You will also need to update references to the returned post object, since you will now find your frontmatter values on the `data` property.
+<ol start="7"><li>
+Replace `Astro.glob()` with [`getCollection()`](/en/reference/api-reference/#getcollection) to fetch content and metadata from your Markdown files. You will also need to update references to the returned post object, since you will now find your frontmatter values on the `data` property.
 
-    The blog index page in the tutorial lists a card for each post:
+The blog index page in the tutorial lists a card for each post:
 
 ```astro title="src/pages/blog.astro" "post.data" "getCollection(\"posts\")"
 ---
@@ -501,7 +502,7 @@ const allPosts = await getCollection("posts");
 </BaseLayout> 
 ```
 
-    The tutorial blog project also dynamically generates a page for each tag. This page now becomes:
+The tutorial blog project also dynamically generates a page for each tag. This page now becomes:
 
 ```js title="src/pages/tags/[tag].astro" "post.data" "getCollection(\"posts\")"
 ...
@@ -522,7 +523,7 @@ export async function getStaticPaths() {
 ...
 ```
 
-    The same logic appears in the tag index page:
+The same logic appears in the tag index page:
 ```astro title="src/pages/tags/index.astro" "post.data" "getCollection(\"posts\")"
 ---
 import { getCollection } from "astro:content";
@@ -538,7 +539,7 @@ const pageTitle = "Tag Index";
 Any individual Markdown or MDX file imports should be replaced by [`getEntryBySlug()`](/en/reference/api-reference/#getentrybyslug).
 :::
 
-    Lastly, the tutorial blog project includes an RSS feed. This file must also use `getCollection` and use the `data` object:
+Lastly, the tutorial blog project includes an RSS feed. This file must also use `getCollection` and use the `data` object:
 
 ```js title="src/pages/rss.xml.js" {5, 10-15} 
 import rss from "@astrojs/rss";
@@ -560,7 +561,7 @@ export async function get() {
   });
 }
 ```
-
+</li></ol>
 For the full example of the blog tutorial using content collections, see the [Content Collections branch](https://github.com/withastro/blog-tutorial-demo/tree/content-collections) of the tutorial repo.
 
 
