--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -475,93 +475,92 @@ If your existing site uses [file-based routing](/en/core-concepts/astro-pages/#m
     ---
     ```
 
-<ol start="7"><li>
-Replace `Astro.glob()` with [`getCollection()`](/en/reference/api-reference/#getcollection) to fetch content and metadata from your Markdown files. You will also need to update references to the returned post object, since you will now find your frontmatter values on the `data` property.
+7. Replace `Astro.glob()` with [`getCollection()`](/en/reference/api-reference/#getcollection) to fetch content and metadata from your Markdown files. You will also need to update references to the returned post object, since you will now find your frontmatter values on the `data` property.
 
-The blog index page in the tutorial lists a card for each post:
+    The blog index page in the tutorial lists a card for each post:
 
-```astro title="src/pages/blog.astro" "post.data" "getCollection(\"posts\")"
----
-import { getCollection } from "astro:content";
-import BaseLayout from "../layouts/BaseLayout.astro";
-import BlogPost from "../components/BlogPost.astro";
+    ```astro title="src/pages/blog.astro" "post.data" "getCollection(\"posts\")"
+    ---
+    import { getCollection } from "astro:content";
+    import BaseLayout from "../layouts/BaseLayout.astro";
+    import BlogPost from "../components/BlogPost.astro";
 
-const pageTitle = "My Astro Learning Blog";
-const allPosts = await getCollection("posts");
----
+    const pageTitle = "My Astro Learning Blog";
+    const allPosts = await getCollection("posts");
+    ---
 
-<BaseLayout pageTitle={pageTitle}>
-  <p>This is where I will post about my journey learning Astro.</p>
-  <ul>
-    {
-      allPosts.map((post) => (
-        <BlogPost url={"/posts/" + post.slug} title={post.data.title} />
-      ))
+    <BaseLayout pageTitle={pageTitle}>
+      <p>This is where I will post about my journey learning Astro.</p>
+      <ul>
+        {
+          allPosts.map((post) => (
+            <BlogPost url={"/posts/" + post.slug} title={post.data.title} />
+          ))
+        }
+      </ul>
+    </BaseLayout> 
+    ```
+
+    The tutorial blog project also dynamically generates a page for each tag. This page now becomes:
+
+    ```js title="src/pages/tags/[tag].astro" "post.data" "getCollection(\"posts\")"
+    ...
+    export async function getStaticPaths() {
+      const allPosts = await getCollection("posts");
+      const uniqueTags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
+
+      return uniqueTags.map((tag) => {
+        const filteredPosts = allPosts.filter((post) =>
+          post.data.tags.includes(tag)
+        );
+        return {
+          params: { tag },
+          props: { posts: filteredPosts },
+        };
+      });
     }
-  </ul>
-</BaseLayout> 
-```
+    ...
+    ```
 
-The tutorial blog project also dynamically generates a page for each tag. This page now becomes:
+    The same logic appears in the tag index page:
+    ```astro title="src/pages/tags/index.astro" "post.data" "getCollection(\"posts\")"
+    ---
+    import { getCollection } from "astro:content";
+    import BaseLayout from "../../layouts/BaseLayout.astro";
+    const allPosts = await getCollection("posts");
+    const tags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
+    const pageTitle = "Tag Index";
+    ---
+    ...
+    ```
 
-```js title="src/pages/tags/[tag].astro" "post.data" "getCollection(\"posts\")"
-...
-export async function getStaticPaths() {
-  const allPosts = await getCollection("posts");
-  const uniqueTags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
+    :::note
+    Any individual Markdown or MDX file imports should be replaced by [`getEntryBySlug()`](/en/reference/api-reference/#getentrybyslug).
+    :::
 
-  return uniqueTags.map((tag) => {
-    const filteredPosts = allPosts.filter((post) =>
-      post.data.tags.includes(tag)
-    );
-    return {
-      params: { tag },
-      props: { posts: filteredPosts },
-    };
-  });
-}
-...
-```
+    Lastly, the tutorial blog project includes an RSS feed. This file must also use `getCollection` and use the `data` object:
 
-The same logic appears in the tag index page:
-```astro title="src/pages/tags/index.astro" "post.data" "getCollection(\"posts\")"
----
-import { getCollection } from "astro:content";
-import BaseLayout from "../../layouts/BaseLayout.astro";
-const allPosts = await getCollection("posts");
-const tags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
-const pageTitle = "Tag Index";
----
-...
-```
+    ```js title="src/pages/rss.xml.js" {5, 10-15} 
+    import rss from "@astrojs/rss";
+    import { getCollection } from "astro:content";
 
-:::note
-Any individual Markdown or MDX file imports should be replaced by [`getEntryBySlug()`](/en/reference/api-reference/#getentrybyslug).
-:::
+    export async function get() {
+      const posts = await getCollection('posts');
+      return rss({
+        title: 'Astro Learner | Blog',
+        description: 'My journey learning Astro',
+        site: 'https://my-blog-site.netlify.app',
+        items: posts.map((post) => ({
+          title: post.data.title,
+          pubDate: post.data.pubDate,
+          description: post.data.description,
+          link: `/posts/${post.slug}/`,
+        })),
+        customData: `<language>en-us</language>`,
+      });
+    }
+    ```
 
-Lastly, the tutorial blog project includes an RSS feed. This file must also use `getCollection` and use the `data` object:
-
-```js title="src/pages/rss.xml.js" {5, 10-15} 
-import rss from "@astrojs/rss";
-import { getCollection } from "astro:content";
-
-export async function get() {
-  const posts = await getCollection('posts');
-  return rss({
-    title: 'Astro Learner | Blog',
-    description: 'My journey learning Astro',
-    site: 'https://my-blog-site.netlify.app',
-    items: posts.map((post) => ({
-      title: post.data.title,
-      pubDate: post.data.pubDate,
-      description: post.data.description,
-      link: `/posts/${post.slug}/`,
-    })),
-    customData: `<language>en-us</language>`,
-  });
-}
-```
-</li></ol>
 For the full example of the blog tutorial using content collections, see the [Content Collections branch](https://github.com/withastro/blog-tutorial-demo/tree/content-collections) of the tutorial repo.
 
 
