Fix: removing 'uniquement que' as @AndiKod said
Co-authored-by: AndiKod <andrei@andikod.fr>

--- a/src/pages/fr/guides/rss.mdx
+++ b/src/pages/fr/guides/rss.mdx
@@ -69,7 +69,7 @@ export const get = () => rss({
 
 Les `items` acceptent soit :
 
-1. [Un résultat de `import.meta.glob(...)`](#1-avec-un-résultat-importmetaglob) **(utilisez cette option uniquement que pour les fichiers `.md` à l'intérieur du répertoire `src/pages/`)**
+1. [Un résultat de `import.meta.glob(...)`](#1-avec-un-résultat-importmetaglob) **(utilisez cette option seulement pour les fichiers `.md` à l'intérieur du répertoire `src/pages/`)**
 2. [Une liste d'objets RSS](#2-avec-une-liste-dobjets-rss), chacun possédant un champ `link`, `title`, `pubDate`, et optionnellement un champ `description` et/ou `customData`.
 
 ### 1. Avec un résultat `import.meta.glob`
