--- a/src/pages/en/tutorial/2-pages/2.mdx
+++ b/src/pages/en/tutorial/2-pages/2.mdx
@@ -73,6 +73,10 @@ Now that you have built pages using `.astro` files, let's make some blog posts u
 
 3. Use your browser's Dev Tools to inspect this page. Notice that although you have not typed any HTML elements, your Markdown has been converted to HTML. You can see elements such as headings, paragraphs, and list items.
 
+:::note
+The information at the top of the file, inside the code fences, is called frontmatter. This data—including tags and a post image—won't appear until we access it later in the tutorial. 
+:::
+
 ## Link to your posts
 
 1. Link to your first post with an anchor tag in `src/pages/blog.astro`:
