--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -464,7 +464,7 @@ This guide shows you how to convert an existing Astro project with Markdown file
     </MarkdownPostLayout>
     ```
 
-6. Now that you wrapped your content in a layout, remove the `layout` definition in each individual post's frontmatter. 
+6. Remove the `layout` definition in each individual post's frontmatter. Your content is now wrapped in a layout when rendered, and this property is no longer needed.
 
     ```md title="src/content/post-1.md" del={2}
     ---
