--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -477,7 +477,7 @@ This guide shows you how to convert an existing Astro project with Markdown file
 
 7. Replace `Astro.glob()` with [`getCollection()`](/en/reference/api-reference/#getcollection) to fetch content and metadata from your Markdown files. You will also need to update references to the returned post object, since you will now find your frontmatter values on the `data` property.
 
-    The blog index page in the tutorial lists a card for each post:
+    The blog index page in the tutorial lists a card for each post. This becomes:
 
     ```astro title="src/pages/blog.astro" "post.data" "getCollection(\"posts\")"
     ---
@@ -522,7 +522,7 @@ This guide shows you how to convert an existing Astro project with Markdown file
     ...
     ```
 
-    The same logic appears in the tag index page:
+    The same logic appears in the tag index page, which becomes:
     ```astro title="src/pages/tags/index.astro" "post.data" "getCollection(\"posts\")"
     ---
     import { getCollection } from "astro:content";
