--- a/src/pages/en/tutorial/2-pages/1.mdx
+++ b/src/pages/en/tutorial/2-pages/1.mdx
@@ -70,7 +70,7 @@ To make it easier to preview all your pages, add HTML page navigation links befo
 Check that you can click these links to move back and forth between pages on your site.
 
 :::note
-Unlike many frameworks, Astro uses standard HTML `<a>` elements to navigate between pages, with traditional page refreshes.
+Unlike many frameworks, Astro uses standard HTML `<a>` elements to navigate between pages (also called _routes_), with traditional page refreshes.
 :::
 
 <Box icon="puzzle-piece">
