--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -133,7 +133,7 @@ description: Find out what makes Astro awesome!
 This is a post written in Markdown.
 ```
 
-Metadata are then available to the layout through `Astro.props`. For example, you can access frontmatter properties through `Astro.props.frontmatter`:
+[Specific properties are then available to the layout component](/en/core-concepts/layouts/#markdown-layout-props)  through `Astro.props`. For example, you can access frontmatter properties through `Astro.props.frontmatter`:
 
 **`src/layouts/BlogPostLayout.astro`**
 
