--- a/src/pages/en/guides/server-side-rendering.mdx
+++ b/src/pages/en/guides/server-side-rendering.mdx
@@ -129,7 +129,7 @@ export const prerender = true;
 # This is my page
 ```
 
-Plain `.md` Markdown pages do not support exporting variables, and so must be converted to `.mdx` before they can be prerendered.
+Markdown (`.md`) pages do not support prerendering.
 
 ### `Astro.request.headers`
 
