--- a/src/pages/en/guides/server-side-rendering.mdx
+++ b/src/pages/en/guides/server-side-rendering.mdx
@@ -74,7 +74,7 @@ You can also add an adapter manually by installing the package and updating `ast
      </Fragment>
      <Fragment slot="pnpm">
      ```shell
-     pnpm install @astrojs/my-adapter 
+     pnpm install @astrojs/my-adapter
      ```
      </Fragment>
      <Fragment slot="yarn">
@@ -105,9 +105,11 @@ Astro will remain a static-site generator by default. But once you enable a serv
 
 <Since v="2.0.0" />
 
-To enable **hybrid rendering**, [pages](/en/core-concepts/astro-pages/) and [server endpoints](/en/core-concepts/endpoints/#server-endpoints-api-routes) can opt-in to prerendering. These files will be statically rendered at build-time, similar to the default static [`output`](/en/reference/configuration-reference/#output) mode.
+To enable **hybrid rendering**, any [page](/en/core-concepts/astro-pages/) or [server endpoint](/en/core-concepts/endpoints/#server-endpoints-api-routes) that supports exporting variables (`.astro`, `.mdx`, `.ts`, or `.js`) can opt-in to prerendering. These files will be statically rendered at build-time, similar to the default static [`output`](/en/reference/configuration-reference/#output) mode.
 
-```astro title="src/pages/index.astro" {2}
+Simply add `export const prerender = true`:
+
+```astro title="src/pages/mypage.astro" {2}
 ---
 export const prerender = true;
 // ...
@@ -117,9 +119,7 @@ export const prerender = true;
 </html>
 ```
 
-[MDX pages](/en/guides/markdown-content/#using-exported-variables-in-mdx) can also be prerendered:
-
-```astro title="src/pages/markdown.mdx" {2}
+```astro title="src/pages/mypage.mdx" {2}
 ---
 layout: '../layouts/markdown.astro'
 title: 'My page'
@@ -129,7 +129,25 @@ export const prerender = true;
 # This is my page
 ```
 
-Markdown (`.md`) pages do not support prerendering.
+```astro title="src/pages/myendpoint.ts" {2}
+export const prerender = true;
+
+export async function get() {
+  return {
+    body: JSON.stringify({ message: `This is my endpoint` }),
+  };
+}
+```
+
+```astro title="src/pages/myendpoint.js" {2}
+export const prerender = true;
+
+export async function get() {
+  return {
+    body: JSON.stringify({ message: `This is my endpoint` }),
+  };
+}
+```
 
 ### `Astro.request.headers`
 
