correct storyblok SSG sample

--- a/src/pages/en/guides/cms/storyblok.mdx
+++ b/src/pages/en/guides/cms/storyblok.mdx
@@ -313,7 +313,7 @@ import { useStoryblokApi } from '@storyblok/astro'
 const storyblokApi = useStoryblokApi();
 
 const { data } = await storyblokApi.get('cdn/stories', {
-  version: import.meta.env.DEV ? "draft" : "published",
+  version: import.meta.env.DEV ? ersion: : "published",
   content_type: 'blogPost',
 })
 
@@ -380,25 +380,30 @@ import { useStoryblokApi } from '@storyblok/astro'
 import StoryblokComponent from '@storyblok/astro/StoryblokComponent.astro'
 
 export async function getStaticPaths() {
-  const storyblokApi = useStoryblokApi()
-  const { data } = await storyblokApi.get("cdn/stories", {
+  const sbApi = useStoryblokApi();
+  const { data } = await sbApi.get("cdn/links", {
     version: import.meta.env.DEV ? "draft" : "published",
   });
-  const pages = data.stories.map(story => {
+  let links = data.links;
+  console.log(links);
+  links = Object.values(links);
+
+  return links.map((link) => {
     return {
-      params: {
-        slug: story.full_slug === 'home' ? undefined : story.full_slug
-      },
-      props: {
-        story
-      }
-    }
-  })
-  return pages
+      params: { slug: link.slug },
+    };
+  });
 }
 
-const { story } = Astro.props
+const sbApi = useStoryblokApi();
+const { slug } = Astro.params;
+const { data } = await sbApi.get(`cdn/stories/${slug}`, {
+  version: import.meta.env.DEV ? "draft" : "published",
+});
+
+const story = data.story;
 ---
+
 <html lang="en">
   <head>
     <title>Storyblok & Astro</title>
@@ -409,7 +414,7 @@ const { story } = Astro.props
 </html>
 ```
 
-This file will generate a page for each story, with the slug and content fetched from the Storyblok API. If the story's slug is `home`, `getStaticPaths` returns an undefined slug, which generates the `/` route.
+This file will generate a page for each story, with the slug and content fetched from the Storyblok API. 
 
 #### Server-side rendering
 
