remove console.log

--- a/src/pages/en/guides/cms/storyblok.mdx
+++ b/src/pages/en/guides/cms/storyblok.mdx
@@ -381,12 +381,12 @@ import StoryblokComponent from '@storyblok/astro/StoryblokComponent.astro'
 
 export async function getStaticPaths() {
   const sbApi = useStoryblokApi();
+
   const { data } = await sbApi.get("cdn/links", {
     version: import.meta.env.DEV ? "draft" : "published",
   });
-  let links = data.links;
-  console.log(links);
-  links = Object.values(links);
+
+  const links = Object.values(data.links);
 
   return links.map((link) => {
     return {
