Add info about JetBrains Astro plugin

--- a/src/pages/en/editor-setup.mdx
+++ b/src/pages/en/editor-setup.mdx
@@ -35,7 +35,7 @@ Our amazing community maintains several extensions for other popular editors, in
 
 ### JetBrains IDEs
 
-JetBrains have announced upcoming support for Astro in their [Webstorm IDE](https://www.jetbrains.com/webstorm/). The [Roadmap](https://blog.jetbrains.com/webstorm/2022/12/webstorm-2023-1-roadmap/) shows that Astro will be supported in the 2023.1 release, which is scheduled for the end of March 2023.
+Initial support for Astro landed in WebStorm 2023.1 (currently in Early Access). You can install the official plugin through [JetBrains Marketplace](https://plugins.jetbrains.com/plugin/20959-astro) or searching for "Astro" in the IDE's Plugins tab and benefit from features like syntax highlighting, code completion, and formatting, with plans to add even more advanced features in the future. It is also available to all other [JetBrains IDEs with JavaScript support](https://www.jetbrains.com/products/#lang=js&type=ide).
 
 JetBrains' upcoming [Fleet IDE](https://www.jetbrains.com/fleet/) also supports language servers and therefore, our currently available tooling will be able to run there without any problem.
 
