--- a/src/pages/fr/core-concepts/endpoints.mdx
+++ b/src/pages/fr/core-concepts/endpoints.mdx
@@ -259,7 +259,7 @@ Ensuite, nous accédons à notre point de terminaison en utilisant `fetch` depui
     <button class="g-recaptcha" 
       data-sitekey="PUBLIC_SITE_KEY" 
       data-callback="onSubmit" 
-      data-action="submit">  pour vérifier le captcha ! </button>
+      data-action="submit"> Cliquez pour vérifier le captcha ! </button>
 
     <script is:inline>
       function onSubmit(token) {
