--- a/src/pages/fr/guides/client-side-scripts.mdx
+++ b/src/pages/fr/guides/client-side-scripts.mdx
@@ -155,7 +155,7 @@ Il y a deux avantages à utiliser un élément personnalisé ici:
 
 1. Au lieu de chercher dans toute la page en utilisant `document.querySelector()`, vous pouvez utiliser `this.querySelector()`, qui ne recherche que dans l'instance courante de l'élément personnalisé. Cela facilite le travail avec seulement les enfants d'une instance de composant à la fois.
 
-2. Bien qu'un script ne s'exécute qu'une seule fois, le navigateur exécutera la méthode `constructor()` de notre élément personnalisé chaque fois qu'il trouvera <astro-heart> sur la page. Cela signifie que vous pouvez écrire du code en toute sécurité pour un composant à la fois, même si vous avez l'intention d'utiliser ce composant plusieurs fois sur une page.
+2. Bien qu'un script ne s'exécute qu'une seule fois, le navigateur exécutera la méthode `constructor()` de notre élément personnalisé chaque fois qu'il trouvera `<astro-heart>` sur la page. Cela signifie que vous pouvez écrire du code en toute sécurité pour un composant à la fois, même si vous avez l'intention d'utiliser ce composant plusieurs fois sur une page.
 
 Vous pouvez en savoir plus sur les éléments personnalisés dans [guide des composants Web réutilisables de web.dev](https://web.dev/custom-elements-v1/) et [Introduction aux composants personnalisés de MDN](https://developer.mozilla.org/fr/docs/Web/Web_Components/Using_custom_elements).
 
