--- a/src/pages/fr/guides/client-side-scripts.mdx
+++ b/src/pages/fr/guides/client-side-scripts.mdx
@@ -206,8 +206,8 @@ import AstroGreet from '../components/AstroGreet.astro';
 <AstroGreet />
 
 <!-- Utiliser des messages personnalisés passés comme prop. -->
-<AstroGreet message="Lovely day to build components!" />
-<AstroGreet message="Glad you made it! 👋" />
+<AstroGreet message="Belle journée pour construire des composants!" />
+<AstroGreet message="Content que tu sois là! 👋" />
 ```
 
 :::tip[Saviez-vous?]
