--- a/src/pages/ja/guides/migrate-to-astro.mdx
+++ b/src/pages/ja/guides/migrate-to-astro.mdx
@@ -32,7 +32,7 @@ Astroは、パフォーマンス、シンプルさ、求める機能の多くが
 
 ## どんなプロジェクトをAstroに変換できますか？
 
-[多くの既存サイトをAstroによって構築することができます](/ja/concepts/why-astro/)。Astroは、ブログ、ランディングページ、マーケティングサイト、ポートフォリオなど、コンテンツをベースとした既存サイトに最適です。Astroは、人気のある複数のヘッドレスCMSと連携したり、eコマース用ショッピングカートに接続したりもできます。
+[多くの既存サイトをAstroで構築できます](/ja/concepts/why-astro/)。Astroは、ブログ、ランディングページ、マーケティングサイト、ポートフォリオなど、コンテンツをベースとした既存サイトに最適です。Astroは、人気のある複数のヘッドレスCMSと連携したり、eコマース用ショッピングカートに接続したりもできます。
 
 Astroでは、サイトを静的生成するか[サーバーサイドレンダリング（SSR）](/ja/guides/server-side-rendering/)するかを選択できるため、静的サイトジェネレーターの代替としても、ページデータを動的に取得する必要があるサイトの代替としても適しています。
 
