--- a/src/pages/ja/guides/migrate-to-astro.mdx
+++ b/src/pages/ja/guides/migrate-to-astro.mdx
@@ -22,7 +22,7 @@ Astroは、パフォーマンス、シンプルさ、求める機能の多くが
 
 プロジェクトによっては、以下の既存の資産を利用できる可能性があります。
 
-- [UIフレームワークコンポーネント](/ja/core-concepts/framework-components/)（Astroでは直接利用可能です）。
+- Astroで直接利用できる[UIフレームワークコンポーネント](/ja/core-concepts/framework-components/)。
 
 - Tailwindを含む、[CSSスタイルシートやライブラリ](/ja/guides/styling/)。
 
