fix the answer in tutorial question with minor addition

--- a/src/pages/en/tutorial/2-pages/3.mdx
+++ b/src/pages/en/tutorial/2-pages/3.mdx
@@ -168,7 +168,7 @@ Open `about.astro` which should look like this:
           When you're not sure whether it's correct.
         </Option>
         <Option isCorrect>
-          In the HTML template section of an Astro component.
+          When inside the HTML template section of an Astro component.
           </Option>
         <Option>
           Between the code fences in an Astro component.
