--- a/src/pages/en/guides/server-side-rendering.mdx
+++ b/src/pages/en/guides/server-side-rendering.mdx
@@ -119,7 +119,7 @@ export const prerender = true;
 </html>
 ```
 
-```astro title="src/pages/mypage.mdx" {5}
+```mdx title="src/pages/mypage.mdx" {5}
 ---
 layout: '../layouts/markdown.astro'
 title: 'My page'
