--- a/src/pages/en/guides/server-side-rendering.mdx
+++ b/src/pages/en/guides/server-side-rendering.mdx
@@ -130,7 +130,7 @@ export const prerender = true;
 ```
 
 
-```astro title="src/pages/myendpoint.js" {1}
+```js title="src/pages/myendpoint.js" {1}
 export const prerender = true;
 
 export async function get() {
