Add missing CLI references.

--- a/src/pages/en/reference/configuration-reference.mdx
+++ b/src/pages/en/reference/configuration-reference.mdx
@@ -115,7 +115,8 @@ The value can be either an absolute file system path or a path relative to the p
 
 <p>
 
-**Type:** `string`
+**Type:** `string`<br />
+**CLI:** `--site`
 </p>
 
 Your final, deployed URL. Astro uses this full URL to generate your sitemap and canonical URLs in your final build. It is strongly recommended that you set this configuration to get the most out of Astro.
@@ -131,7 +132,8 @@ Your final, deployed URL. Astro uses this full URL to generate your sitemap and 
 
 <p>
 
-**Type:** `string`
+**Type:** `string`<br />
+**CLI:** `--base`
 </p>
 
 The base path to deploy to. Astro will use this path as the root for your pages and assets both in development and in production build.
