--- a/src/pages/en/guides/server-side-rendering.mdx
+++ b/src/pages/en/guides/server-side-rendering.mdx
@@ -119,7 +119,7 @@ export const prerender = true;
 </html>
 ```
 
-```astro title="src/pages/mypage.mdx" {2}
+```mdx title="src/pages/mypage.mdx" {5}
 ---
 layout: '../layouts/markdown.astro'
 title: 'My page'
@@ -130,7 +130,7 @@ export const prerender = true;
 ```
 
 
-```astro title="src/pages/myendpoint.js" {2}
+```js title="src/pages/myendpoint.js" {1}
 export const prerender = true;
 
 export async function get() {
