--- a/src/pages/es/guides/troubleshooting.mdx
+++ b/src/pages/es/guides/troubleshooting.mdx
@@ -44,7 +44,7 @@ Los componentes de framework se ejecutan en el servidor por defecto, por lo que 
 
 Este error puede ser lanzado cuando intentas importar o renderizar un componente inválido, o uno que no funciona de manera correcta. (Este mensaje particular ocurre por la forma en que funciona la importación de componentes de UI en Astro.)
 
-**Solución**: Intenta buscar errores en los componentes que estás intentando importar y renderizar, y asegúrate que estan funcionando correctamente. Considera abrir una plantilla de inicio de Astro desde [astro.new](https://astro.new) para intentar solucionar el problema de tu componente en un entorno mas sencillo
+**Solución**: Intenta buscar errores en los componentes que estás intentando importar y renderizar, y asegúrate que están funcionando correctamente. Considera abrir una plantilla de inicio de Astro desde [astro.new](https://astro.new) para intentar solucionar el problema de tu componente en un entorno mas sencillo
 
 **Estado**: Comportamiento esperado de Astro.
 
