i18n(ja): Update astro-pages.mdx

--- a/src/pages/ja/core-concepts/astro-pages.mdx
+++ b/src/pages/ja/core-concepts/astro-pages.mdx
@@ -20,6 +20,8 @@ Astroは`src/pages/`ディレクトリで次のファイルタイプをサポー
 
 Astroは、**ファイルベースルーティング**と呼ばれるルーティング手法を採用しています。 `src/pages/`ディレクトリの各ファイルはそのファイルパスに基づいたエンドポイントになります。
 
+また、[動的ルーティング](/ja/core-concepts/routing/#動的ルーティング)を使用して、1つのファイルから複数のページを生成できます。これにより、[コンテンツコレクション](/ja/guides/content-collections/)や[CMS](/ja/guides/cms/)など、特別な`/pages/`ディレクトリの外にコンテンツがあっても、ページを作成できます。
+
 📚 [Astroのルーティング](/ja/core-concepts/routing/)について詳しくみる。
 
 ### ページ間のリンク
@@ -61,6 +63,8 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 ## Markdown/MDXページ
 
 Astroは`/src/pages/`にあるMarkdown (`.md`) ファイルも、最終的なWebサイトのページとして扱います。もし[MDXインテグレーションがインストールされている](/ja/guides/integrations-guide/mdx/#installation)場合、MDX(`.mdx`)ファイルも同じように扱われます。これらは一般的に、ブログの投稿やドキュメントのような、テキストを多用するページに使用されます。
+
+`src/content/`にある[MarkdownやMDXページコンテンツのコレクション](/ja/guides/content-collections/)は、[動的にページを生成する](/ja/core-concepts/routing/#動的ルーティング)ために使用できます。
 
 ページレイアウトは[Markdownファイル](#markdownmdxページ)に対して特に有効です。Markdownファイルは特別な `layout`というフロントマターのプロパティを使用して、Markdownコンテンツを`<html>...</html>`ページドキュメントにラップする [レイアウトコンポーネント](/ja/core-concepts/layouts/)を指定できます。
 
