Fix: broken links

--- a/src/pages/fr/guides/rss.mdx
+++ b/src/pages/fr/guides/rss.mdx
@@ -109,7 +109,7 @@ export const collections = { blog };
 
 <Since v="2.1.0" pkg="@astrojs/rss" />
 
-Pour créer un flux RSS depuis les documents dans `/src/pages`, utilisez l'Helper `pagesGlobToRssItems()`. Elle accepte un résultat [`import.meta.glob`](https://vitejs.dev/guide/features.html#glob-import) et produit un tableau d'items de flux RSS valides (en savoir plus [à propos de l'écriture des patterns globaux](/fr/guides/imports/#glob-patterns) pour spécifier les pages à inclure).
+Pour créer un flux RSS depuis les documents dans `/src/pages`, utilisez l'Helper `pagesGlobToRssItems()`. Elle accepte un résultat [`import.meta.glob`](https://vitejs.dev/guide/features.html#glob-import) et produit un tableau d'items de flux RSS valides (en savoir plus [à propos de l'écriture des patterns globaux](/fr/guides/imports/#patterns-globaux) pour spécifier les pages à inclure).
 
 Cette fonction suppose, mais ne vérifie pas, que toutes les propriétés de flux requises sont présentes dans le frontmatter de chaque document. Si vous rencontrez des erreurs, vérifiez le frontmatter de chaque page manuellement.
 
