Add more small updates

--- a/src/pages/pt-br/editor-setup.mdx
+++ b/src/pages/pt-br/editor-setup.mdx
@@ -35,7 +35,7 @@ Nossa espetacular comunidade mantém várias extensões para outros editores pop
 
 ## IDEs da JetBrains
 
-A JetBrains anunciou o futuro suporte para Astro em sua [IDE Webstorm](https://www.jetbrains.com/webstorm/). A [Roadmap](https://blog.jetbrains.com/webstorm/2022/12/webstorm-2023-1-roadmap/) mostra que Astro será suportado no lançamento 2023.1, que está marcado para o fim de Março de 2023.
+Suporte inicial para Astro foi lançado no WebStorm 2023.1 (atualmente em Acesso Antecipado). Você pode instalar o plugin oficial no [JetBrains Marketplace](https://plugins.jetbrains.com/plugin/20959-astro) ou pesquisando por "Astro" na aba Plugins da IDE e se beneficiar de funcionalidades como syntax highlighting, code completion e formatação, com planos para adicionar funcionalidades ainda mais avançadas no futuro. Ele está também disponível em todos as outras [IDEs da JetBrains com suporte a JavaScript](https://www.jetbrains.com/products/#lang=js&type=ide).
 
 A futura [IDE Fleet](https://www.jetbrains.com/fleet/) da JetBrains também suporta servidores de linguagem e portanto, nossas ferramentas atualmente disponíveis serão capazes de ser executadas nele sem nenhum problema.
 
