--- a/src/pages/es/guides/markdown-content.mdx
+++ b/src/pages/es/guides/markdown-content.mdx
@@ -131,7 +131,7 @@ description: ¡Descubre por qué Astro es genial!
 Este es un artículo escrito en Markdown.
 ```
 
-Luego las propiedades de frontmatter están disponibles en la plantilla a través de `Astro.props`:
+[Luego las propiedades especificas están disponibles para el componente plantilla](/es/core-concepts/layouts/#props-de-plantillas-markdown) a través de `Astro.props`. Por ejemplo, puedes acceder a las propiedades del frontmatter a través de `Astro.props.frontmatter`:
 
 **`src/layouts/BlogPostLayout.astro`**
 
@@ -143,11 +143,12 @@ const { frontmatter } = Astro.props;
   <!-- ... -->
   <h1>{frontmatter.title}</h1>
   <h2>Autor del artículo: {frontmatter.author}</h2>
-  <p>{frontmatter.description}<p>
+  <p>{frontmatter.description}</p>
   <slot /> <!-- Aquí se inyecta el contenido Markdown -->
    <!-- ... -->
 </html>
 ```
+
 
 Puedes también [aplicar estilos al Markdown](/es/guides/styling/#estilando-markdown) en tu componente plantilla.
 
