--- a/src/pages/es/reference/publish-to-npm.mdx
+++ b/src/pages/es/reference/publish-to-npm.mdx
@@ -263,7 +263,7 @@ Si necesitas algún otro tipo de archivo que Astro no admita de forma nativa, pu
 
 ### Datos en `package.json`
 
-La biblioteca se actualiza automáticamente todas las noches, agregando todos los paquetes publicados en NPM con la palabra clave `astro-component`.
+La biblioteca se actualiza automáticamente todas las noches, agregando todos los paquetes publicados en NPM con la palabra clave `astro-component` o `withastro`.
 
 La biblioteca de integraciones lee los datos `name`, `description`, `repository` y `homepage` de tu `package.json`.
 
