--- a/src/pages/es/reference/errors/invalid-content-entry-slug-error.mdx
+++ b/src/pages/es/reference/errors/invalid-content-entry-slug-error.mdx
@@ -10,9 +10,7 @@ i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 ---
 
-> **InvalidContentEntrySlugError**: 
-            return `STRING(COLLECTION) → STRING(ENTRY_ID) tiene un slug no válido. El campo `slug` debe ser un string.`;
-         (E09002)
+STRING(COLLECTION) → STRING(ENTRY_ID) tiene un slug no válido. El campo `slug` debe ser un string. (E09002)
 
 ## ¿Qué salió mal?
 Un archivo en `src/content/` tiene un `slug` no válido. Este campo está reservado para generar slugs y debe ser un string cuando está presente.
