directly render the home page

--- a/src/pages/en/guides/cms/storyblok.mdx
+++ b/src/pages/en/guides/cms/storyblok.mdx
@@ -192,18 +192,16 @@ export default defineConfig({
 
 ### Fetching data
 
-To test the setup, in Storyblok create a new story with the `blogPost` content type named `test-post`. 
+To test the setup, create a new page in the `src/pages` directory named `index.astro` with the following content:
 
-In Astro, create a new page in the `src/pages` directory named `test-post.astro` with the following content:
-
-```astro title="pages/test-post.astro"
+```astro title="pages/index.astro"
 ---
 import { useStoryblokApi } from '@storyblok/astro'
 import StoryblokComponent from '@storyblok/astro/StoryblokComponent.astro'
 
 const storyblokApi = useStoryblokApi()
 
-const { data } = await storyblokApi.get("cdn/stories/test-post", {
+const { data } = await storyblokApi.get("cdn/stories/home", {
   version: import.meta.env.DEV ? "draft" : "published",
 });
 
@@ -367,6 +365,30 @@ export default defineConfig({
 ```
 
 ### Generating pages
+
+To create a route for a specific `page`, you can fetch its directly from the Storyblok API and pass it to the `Page` component. Create an `index.astro` file in `src/pages` to render the `home` page:
+
+```astro title="src/pages/index.astro" {7,8,15} 
+---
+import { useStoryblokApi } from '@storyblok/astro'
+import BaseLayout from '../layouts/BaseLayout.astro'
+import Page from '../storyblok/Page.astro';
+
+const storyblokApi = useStoryblokApi();
+const { data } = await storyblokApi.get('cdn/stories/home');
+const content = data.story.content;
+---
+<html lang="en">
+  <head>
+    <title>Storyblok & Astro</title>
+  </head>
+  <body>
+    <Page blok={content} />
+  </body>
+</html>
+```
+
+To dynamically render all of the blog posts, create a dynamic route. This approach varies depending on whether you're using **static site generation** (the default) or **server-side rendering**.
 
 #### Static site generation
 
