--- a/src/pages/fr/guides/client-side-scripts.mdx
+++ b/src/pages/fr/guides/client-side-scripts.mdx
@@ -7,14 +7,13 @@ layout: ~/layouts/MainLayout.astro
 i18nReady: true
 ---
 
-Vous pouvez ajouter de l'interactivité à vos composants Astro sans [utiliser un framework UI](/fr/core-concepts/framework-components/) comme React, Svelte, Vue, etc. en utilisant le HTML tag `<script>`. Cela vous permet d'envoyer JavaScript pour exécuter dans le navigateur et ajouter des fonctionnalités à vous composants Astro.
+Vous pouvez ajouter de l'interactivité à vos composants Astro sans [utiliser un framework UI](/fr/core-concepts/framework-components/) comme React, Svelte, Vue, etc. en utilisant la balise HTML `<script>`. Cela vous permet d'exécuter votre JavaScript pour dans le navigateur et ajouter des fonctionnalités à vos composants Astro.
 
 ## Utilisation du `<script>` en Astro.
 
-In `.astro` files, you can add client-side JavaScript by adding one (or more) `<script>` tags.
-Dans les fichiers `.astro`, vous pouvez ajouter du JavaScript côté client en ajoutant un (ou plusieurs) tags `<script>`.
+Dans les fichiers `.astro`, vous pouvez ajouter du JavaScript côté client en ajoutant une (ou plusieurs) balises `<script>`.
 
-Dans cet example, l'ajout du composant `<Hello />` à un page enregistrera un message sur la console du navigateur.
+Dans cet example, l'ajout du composant `<Hello />` à un page enregistrera un message dans la console du navigateur.
 
 ```astro title="src/compnonents/Hello.astro"
 <h1>Bienvenue, monde!</h1>
@@ -26,9 +25,9 @@ Dans cet example, l'ajout du composant `<Hello />` à un page enregistrera un me
 
 ### Regroupement de script
 
-Par défaut, les tags `<script>` sont processés par Astro.
+Par défaut, les balises `<script>` sont processées par Astro.
 
-- Quelques importations seront groupées, vous permettant d'importer des fichiers locaux ou des modules Node.
+- Toutes les importations seront regroupées, ce qui vous permettra d'importer des fichiers locaux ou des modules Node.
 - Le script traité sera injecté dans le `<head>` de votre page HTML avec [`type="module"`](https://developer.mozilla.org/fr/docs/Web/JavaScript/Guide/Modules).
 - TypeScript est entièrement supporté, y compris l'importation de fichiers TypeScript.
 - Si votre composant est utilisé plusieurs fois sur un page, le script ne sera inclus qu'une seule fois.
@@ -45,20 +44,20 @@ Pour éviter le regroupement de script, vous pouvez utiliser la directive `is:li
 ``` astro title:"src/components/InlineScript.astro" "is:line"
 <script is:line>
   // Sera rendu dans le HTML exactement comme écrit.
-  // Les imports lacales ne sont pas résolues et ne fonctionneront pas.
-  // Si dans un composant, répète chaque fois que le composant est utilisé.
+  // Les importations locales ne sont pas résolues et ne fonctionneront pas.
+  // S'il se trouve dans un composant, il se répète chaque fois que le composant est utilisé.
 </script>
 ```
 
 :::note
-L'ajout de `type=module` ou d'un attribut autre que `src` à un tag `<script>` désactivera le comportement de regroupement par défaut d'Astro, traitant le tag comme s'il avait une directive `is:line`.
+L'ajout de `type="module"` ou de tout autre attribut que `src` à une balise `<script>` désactivera le comportement de regroupement par défaut d'Astro, en traitant la balise comme si elle avait une directive `is:inline`.
 :::
 
-📚 Consultez notre [directives reference](/fr/reference/directives-reference/#script--style-directives) pour plus d'information sur les directives disponible pour les tags `<script>`.
+📚 Consultez notre [directives reference](/fr/reference/directives-reference/#script--style-directives) pour plus d'information sur les directives disponible pour les balises `<script>`.
 
 ### Chargement de script
 
-Vous voudriez écrire vos scripts dans un fichier séparé `.js`/`.ts` ou avoir besoin de référencer un script externe sur un autre serveur. Vous pouvez le faire en les référençant dans l'attribut `src`d'un tag `<script>`.
+Vous voudriez écrire vos scripts dans un fichier séparé `.js`/`.ts` ou avoir besoin de référencer un script externe sur un autre serveur. Vous pouvez le faire en les référençant dans l'attribut `src`d'une balise `<script>`.
 
 ### Importer des scripts locaux
 
@@ -94,7 +93,7 @@ Pour charger des scripts en dehors du dossier `src/` de votre projet, incluez la
 
 Certains frameworks d'interface utilisent une syntaxe personnalisée pour la gestion d'événements comme `onClick={...}`  (React/Preact) ou `@click="..."` (Vue). Astro suit le HTML standard de plus près et n’utilise pas de syntaxe personnalisée pour les événements.
 
-Au lieu de cela, vous pouvez utiliser [`addEventListener`](https://developer.mozilla.org/fr/docs/Web/API/EventTarget/addEventListener) dans un tag `<script>` pour gérer les interactions utilisateur.
+Au lieu de cela, vous pouvez utiliser [`addEventListener`](https://developer.mozilla.org/fr/docs/Web/API/EventTarget/addEventListener) dans une balise `<script>` pour gérer les interactions utilisateur.
 
 ```astro title="src/components/AlertButton.astro"
 <button class="alert">Cliquez-moi!</button>
